syntax = "proto3";

package proteus.v1;

option go_package = "proteus-core/proto/gen;proteusv1";

import "google/protobuf/struct.proto";

// --- Common ---
enum DataType {
	DATA_TYPE_UNSPECIFIED = 0;
	DATA_TYPE_TEXT = 1;
	DATA_TYPE_NUMBER = 2;
	DATA_TYPE_BOOLEAN = 3;
	DATA_TYPE_RELATION = 4;
}

// --- Domain Entity ---
message Entity {
	string id = 1;
	string display_name = 2;
	string system_name = 3;
	bool is_system = 4;
	repeated Field fields = 5;
}

message Field {
	string id = 1;
	string display_name = 2;
	string system_name = 3;
	DataType data_type = 4;
	string entity_id = 5;
	string relation_target_id = 6;
	google.protobuf.Struct ui_config = 7;
	google.protobuf.Struct validation = 8;
	bool is_system = 9;
}

// --- Schema DTOs ---
message CreateEntityRequest {
	string display_name = 1;
	string system_name = 2;
}

message UpdateEntityRequest {
	string id = 1;
	string display_name = 2;
}

message CreateFieldRequest {
	string entity_id = 1;
	string display_name = 2;
	string system_name = 3;
	DataType data_type = 4;
	string relation_target_id = 5;
	google.protobuf.Struct ui_config = 6;
	google.protobuf.Struct validation = 7;
}

message UpdateFieldRequest {
	string id = 1;
	string display_name = 2;
	google.protobuf.Struct ui_config = 3;
	google.protobuf.Struct validation = 4;
}

// --- Data DTOs ---
message CreateRecordRequest {
	string entity_id = 1;
	google.protobuf.Struct data = 2;
}

message UpdateRecordRequest {
	string entity_id = 1;
	string record_id = 2;
	google.protobuf.Struct data = 3;
}

message RecordResponse {
	string id = 1;
	google.protobuf.Struct data = 2;
}

message Filter {
	string field = 1;
	string operator = 2;
	google.protobuf.Value value = 3;
}

message Sort {
	string field = 1;
	bool desc = 2;
}

message Pagination {
	int32 page = 1;
	int32 limit = 2;
}

message QueryRequest {
	string entity_id = 1;
	repeated Filter filters = 2;
	Sort sort = 3;
	Pagination pagination = 4;
}

message QueryResponse {
	repeated RecordResponse data = 1;
	int32 total_count = 2;
	int32 page = 3;
	int32 limit = 4;
}

// --- Events ---
message FetchRequest {
  int32 batch_size = 1;
  string worker_id = 2;
}

message FetchResponse {
  repeated Event events = 1;
}

message Event {
  string id = 1;
  string aggregate_id = 2;
  string event_type = 3;
  string payload_json = 4;
  int64 created_at = 5;
}

message AckRequest {
  string event_id = 1;
  bool success = 2;
  string error_message = 3;
}

message AckResponse {
  bool status = 1;
}

// --- Utility Messages ---
message Empty {}

message EntityIdRequest {
	string id = 1;
}

message FieldIdRequest {
	string id = 1;
}

message EntitiesResponse {
	repeated Entity entities = 1;
}

message DeleteResponse {
	bool success = 1;
	string message = 2;
}

message DeleteRecordRequest {
	string entity_id = 1;
	string record_id = 2;
}

message GetRecordRequest {
	string entity_id = 1;
	string record_id = 2;
}

// --- Schema Service ---
service SchemaService {
	// Creates a new entity with the given display and system name.
	rpc CreateEntity(CreateEntityRequest) returns (Entity);

	// Updates the display name of an existing entity.
	rpc UpdateEntity(UpdateEntityRequest) returns (Entity);

	// Deletes an entity by its ID. Returns success status and message.
	rpc DeleteEntity(EntityIdRequest) returns (DeleteResponse);

	// Lists all entities in the system.
	rpc ListEntities(Empty) returns (EntitiesResponse);

	// Gets a single entity by its ID.
	rpc GetEntity(EntityIdRequest) returns (Entity);

	// Creates a new field for an entity.
	rpc CreateField(CreateFieldRequest) returns (Field);

	// Updates an existing field's display name, UI config, or validation.
	rpc UpdateField(UpdateFieldRequest) returns (Field);

	// Deletes a field by its ID. Returns success status and message.
	rpc DeleteField(FieldIdRequest) returns (DeleteResponse);

	// Gets a single field by its ID.
	rpc GetField(FieldIdRequest) returns (Field);
}

// --- Data Service ---
service DataService {
	// Creates a new record for the given entity.
	rpc CreateRecord(CreateRecordRequest) returns (RecordResponse);

	// Updates an existing record by entity and record ID.
	rpc UpdateRecord(UpdateRecordRequest) returns (RecordResponse);

	// Deletes a record by entity and record ID. Returns success status and message.
	rpc DeleteRecord(DeleteRecordRequest) returns (DeleteResponse);

	// Gets a single record by entity and record ID.
	rpc GetRecord(GetRecordRequest) returns (RecordResponse);

	// Queries records for an entity with filters, sort, and pagination.
	rpc Query(QueryRequest) returns (QueryResponse);
}

// --- Event Service ---
service EventService {
	// Fetches pending events for processing.
	rpc FetchPendingEvents (FetchRequest) returns (FetchResponse);
	// Acknowledges the processing of an event.
  	rpc AcknowledgeEvent (AckRequest) returns (AckResponse);
}

// --- Tenant DTOs ---
message Tenant {
    string id = 1;
    string name = 2;
    string connection_string = 3;
    string created_at = 4;
    string updated_at = 5;
    string read_connection_string = 6;
}

message CreateTenantRequest {
    string name = 1;
    string connection_string = 2;
    string read_connection_string = 3;
}

message UpdateTenantRequest {
    string id = 1;
    string name = 2;
    string connection_string = 3;
    string read_connection_string = 4;
}

message TenantIdRequest {
    string id = 1;
}

message TenantsResponse {
    repeated Tenant tenants = 1;
}

// --- Tenant Service ---
service TenantService {
	// Creates a new tenant.
    rpc CreateTenant(CreateTenantRequest) returns (Tenant);
	// Updates an existing tenant.
    rpc UpdateTenant(UpdateTenantRequest) returns (Tenant);
	// Deletes a tenant by ID.
    rpc DeleteTenant(TenantIdRequest) returns (DeleteResponse);
	// Gets a tenant by ID.
    rpc GetTenant(TenantIdRequest) returns (Tenant);
	// Lists all tenants.
    rpc ListTenants(Empty) returns (TenantsResponse);
}